--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,4 +1,4 @@
-# 2018年4月17日 20:10 UTC/GMT +9
+# 2018年4月18日 14:42 UTC/GMT +9
 
 [General]
 bypass-system = true
@@ -5317,6 +5317,7 @@ USER-AGENT,Argo*,DIRECT
 USER-AGENT,Coinbase*,DIRECT
 USER-AGENT,com.google.ios.youtube*,DIRECT
 USER-AGENT,Instagram*,DIRECT
+USER-AGENT,PayPal*,DIRECT
 USER-AGENT,Resilio Sync*,DIRECT
 USER-AGENT,SoundCloud*,DIRECT
 USER-AGENT,WeMusic*,DIRECT
@@ -5339,8 +5340,8 @@ USER-AGENT,TwDramas,DIRECT
 DOMAIN-SUFFIX,chocotv.com.tw,DIRECT
 
 // Epicgames
-DOMAIN-KEYWORD,epicgames,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,helpshift.com,DIRECT,force-remote-dns
+DOMAIN-KEYWORD,epicgames,DIRECT
+DOMAIN-SUFFIX,helpshift.com,DIRECT
 
 // Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
@@ -5357,7 +5358,7 @@ DOMAIN-KEYWORD,youtube,DIRECT
 // Line
 DOMAIN-SUFFIX,lin.ee,DIRECT
 DOMAIN-SUFFIX,line.me,DIRECT
-DOMAIN-SUFFIX,line.naver.jp,DIRECT,force-remote-dns
+DOMAIN-SUFFIX,line.naver.jp,DIRECT
 DOMAIN-SUFFIX,line-apps.com,DIRECT
 DOMAIN-SUFFIX,line-cdn.net,DIRECT
 DOMAIN-SUFFIX,line-scdn.net,DIRECT
@@ -6076,11 +6077,8 @@ USER-AGENT,hide*,PROXY
 USER-AGENT,JDLife*,PROXY
 USER-AGENT,MegaWerewolf*,PROXY
 USER-AGENT,MicroMessenger*,PROXY
-USER-AGENT,Microsoft*,PROXY
 USER-AGENT,Moke*,PROXY
-USER-AGENT,OneDrive*,PROXY
 USER-AGENT,osee2unifiedRelease*,PROXY
-USER-AGENT,PayPal*,PROXY
 USER-AGENT,QQ*,PROXY
 USER-AGENT,Speedtest*,PROXY
 USER-AGENT,TeamViewer*,PROXY
@@ -6127,6 +6125,7 @@ DOMAIN-SUFFIX,189.cn,PROXY
 DOMAIN-SUFFIX,autohome.com.cn,PROXY
 DOMAIN-SUFFIX,bitauto.com,PROXY
 DOMAIN-SUFFIX,ccb.com,PROXY
+DOMAIN-SUFFIX,didistatic.com,PROXY
 DOMAIN-SUFFIX,smartisan.com,PROXY
 DOMAIN-SUFFIX,umetrip.com,PROXY
 DOMAIN-SUFFIX,yiche.com,PROXY
@@ -6245,7 +6244,6 @@ DOMAIN-SUFFIX,maven.org,PROXY
 DOMAIN-SUFFIX,meizu.com,PROXY
 DOMAIN-SUFFIX,mi.com,PROXY
 DOMAIN-SUFFIX,miaopai.com,PROXY
-DOMAIN-SUFFIX,microsoft.com,PROXY
 DOMAIN-SUFFIX,miui.com,PROXY
 DOMAIN-SUFFIX,miwifi.com,PROXY
 DOMAIN-SUFFIX,mob.com,PROXY
@@ -6258,9 +6256,7 @@ DOMAIN-SUFFIX,netease.com,PROXY
 DOMAIN-SUFFIX,nssurge.com,PROXY
 DOMAIN-SUFFIX,nuomi.com,PROXY
 DOMAIN-SUFFIX,ourdvs.com,PROXY
-DOMAIN-SUFFIX,outlook.com,PROXY
 DOMAIN-SUFFIX,overcast.fm,PROXY
-DOMAIN-SUFFIX,paypal.com,PROXY
 DOMAIN-SUFFIX,paypalobjects.com,PROXY
 DOMAIN-SUFFIX,pgyer.com,PROXY
 DOMAIN-SUFFIX,pixiv.net,PROXY
@@ -6391,35 +6387,6 @@ FINAL,DIRECT
 
 localhost = 127.0.0.1
 syria.sy = 127.0.0.1
-
-thisisinsider.com = server:8.8.4.4
-
-accounts.pixiv.net = 210.129.120.44
-app-api.pixiv.net = 210.129.120.41
-d.pixiv.org = 210.140.131.160
-dic.pixiv.net = 210.129.120.41
-i.pximg.net = 210.140.92.136
-imgaz.pixiv.net = 210.140.131.145
-oauth.secure.pixiv.net = 210.129.120.43
-pixiv.net = 210.129.120.41
-pixiv.pximg.net = 210.140.92.135
-source.pixiv.net = 210.140.131.144
-touch.pixiv.net = 210.129.120.43
-www.pixiv.net = 210.129.120.41
-
-gmail.com = 216.58.203.191
-chatenabled.mail.google.com = 216.58.203.252
-filetransferenabled.mail.google.com = 216.58.221.93
-gmail.google.com = 216.58.221.89
-googlemail.l.google.com = 216.58.203.184
-inbox.google.com = 74.125.197.19
-isolated.mail.google.com = 216.58.221.91
-m.gmail.com = 216.58.221.88
-m.googlemail.com = 216.58.221.92
-mail.google.com = 74.125.199.17
-mail-settings.google.com = 216.58.203.190
-www.gmail.com = 216.58.203.184
-
 
 
 [URL Rewrite]
