--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年4月17日 18:40 UTC/GMT +9
+# 2018年4月18日 14:50 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。找到选项，左滑选择【Replace】，然后【OK】。
 
@@ -5188,7 +5188,7 @@ DOMAIN-SUFFIX,zzrcz.com,REJECT
 DOMAIN-SUFFIX,zzsx8.com,REJECT
 
 
-//传说对决
+// 传说对决
 USER-AGENT,kgtw*,DIRECT
 DOMAIN-SUFFIX,garena.com,DIRECT
 
@@ -5214,11 +5214,11 @@ DOMAIN-SUFFIX,outlook.com,选择微软服务的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,windows.com,选择微软服务的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,windows.net,选择微软服务的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的Policy，不懂就选择DIRECT
-//PayPal
+// PayPal
 USER-AGENT,PayPal*,选择PayPal的Policy，不懂就选择DIRECT
 DOMAIN-KEYWORD,paypal,选择PayPal的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,paypal.com,选择PayPal的Policy，不懂就选择DIRECT
-//Apple
+// Apple
 IP-CIDR,17.0.0.0/8,选择Apple的Policy，不懂就选择DIRECT,no-resolve
 DOMAIN,appleiphonecell.com,选择Apple的Policy，不懂就选择DIRECT
 USER-AGENT,AppStore*,选择Apple的Policy，不懂就选择DIRECT
@@ -5235,7 +5235,7 @@ DOMAIN-SUFFIX,icloud.com,选择Apple的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,icloud-content.com,选择Apple的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,itunes.com,选择Apple的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的Policy，不懂就选择DIRECT
-//Netflix
+// Netflix
 USER-AGENT,Argo*,选择Netflix的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,netflix.com,选择Netflix的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,netflix.net,选择Netflix的Policy，不懂就选择DIRECT
@@ -5278,7 +5278,7 @@ USER-AGENT,WhatsApp*,DIRECT
 
 # DIRECT
 
-//Google
+// Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
 DOMAIN-SUFFIX,goo.gl,DIRECT
@@ -5916,6 +5916,8 @@ DOMAIN-SUFFIX,189.cn,PROXY
 DOMAIN-SUFFIX,autohome.com.cn,PROXY
 DOMAIN-SUFFIX,bitauto.com,PROXY
 DOMAIN-SUFFIX,ccb.com,PROXY
+DOMAIN-SUFFIX,didistatic.com,PROXY
+DOMAIN-SUFFIX,hiwifi.com,PROXY
 DOMAIN-SUFFIX,smartisan.com,PROXY
 DOMAIN-SUFFIX,umetrip.com,PROXY
 DOMAIN-SUFFIX,yiche.com,PROXY
@@ -6030,7 +6032,6 @@ DOMAIN-SUFFIX,maven.org,PROXY
 DOMAIN-SUFFIX,meizu.com,PROXY
 DOMAIN-SUFFIX,mi.com,PROXY
 DOMAIN-SUFFIX,miaopai.com,PROXY
-DOMAIN-SUFFIX,microsoft.com,PROXY
 DOMAIN-SUFFIX,miui.com,PROXY
 DOMAIN-SUFFIX,miwifi.com,PROXY
 DOMAIN-SUFFIX,mob.com,PROXY
