--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,9 +1,9 @@
-# 2018年4月18日 14:42 UTC/GMT +9
+# 2018年4月21日 13:30 UTC/GMT +9
 
 [General]
 bypass-system = true
 dns-server = system
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com,::ffff:0.0.0.0/1,::ffff:128.0.0.0/1
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 
 [Rule]
@@ -66,7 +66,6 @@ DOMAIN-SUFFIX,gamecenter.iqiyi.com,REJECT
 DOMAIN-SUFFIX,hotchat-im.iqiyi.com,REJECT
 DOMAIN-SUFFIX,ifacelog.iqiyi.com,REJECT
 DOMAIN-SUFFIX,mbdlog.iqiyi.com,REJECT
-DOMAIN-SUFFIX,msg.71.am,REJECT
 DOMAIN-SUFFIX,msg.video.qiyi.com,REJECT
 DOMAIN-SUFFIX,msg2.video.qiyi.com,REJECT
 DOMAIN-SUFFIX,msga.cupid.iqiyi.com,REJECT
@@ -588,6 +587,7 @@ DOMAIN-SUFFIX,dxp.baidu.com,REJECT
 DOMAIN-SUFFIX,dzl.baidu.com,REJECT
 DOMAIN-SUFFIX,eclick.baidu.com,REJECT
 DOMAIN-SUFFIX,eiv.baidu.com,REJECT
+DOMAIN-SUFFIX,em.baidu.com,REJECT
 DOMAIN-SUFFIX,entry.baidu.com,REJECT
 DOMAIN-SUFFIX,ers.baidu.com,REJECT
 DOMAIN-SUFFIX,f10.baidu.com,REJECT
@@ -739,8 +739,6 @@ DOMAIN-SUFFIX,ads.google.com,REJECT
 DOMAIN-SUFFIX,afd.l.google.com,REJECT
 DOMAIN-SUFFIX,doubleclick.com,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
-DOMAIN-SUFFIX,googleadservices.com,REJECT
-DOMAIN-SUFFIX,googleadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlesyndication.com,REJECT
 DOMAIN-SUFFIX,googletagmanager.com,REJECT
 DOMAIN-SUFFIX,googletakes.com,REJECT
@@ -760,7 +758,6 @@ DOMAIN-SUFFIX,img-x.jd.com,REJECT
 // Kugou
 DOMAIN-SUFFIX,ads.bssdl.kugou.com,REJECT
 DOMAIN-SUFFIX,ads.service.kugou.com,REJECT
-DOMAIN-SUFFIX,adserviceretry.kugou.com,REJECT
 DOMAIN-SUFFIX,adsfile.bssdlbig.kugou.com,REJECT
 DOMAIN-SUFFIX,channel.fanxing.kugou.com,REJECT
 DOMAIN-SUFFIX,d.kugou.com,REJECT
@@ -937,6 +934,7 @@ DOMAIN-SUFFIX,rm.sina.com.cn,REJECT
 DOMAIN-SUFFIX,rs.sinajs.cn,REJECT
 DOMAIN-SUFFIX,s.alitui.weibo.com,REJECT
 DOMAIN-SUFFIX,s.img.mix.sina.com.cn,REJECT
+DOMAIN-SUFFIX,sapi.sina.cn,REJECT
 DOMAIN-SUFFIX,sax.sina.cn,REJECT
 DOMAIN-SUFFIX,sax.sina.com.cn,REJECT
 DOMAIN-SUFFIX,saxn.sina.com.cn,REJECT
@@ -960,6 +958,7 @@ DOMAIN-SUFFIX,widget.weibo.com,REJECT
 DOMAIN-SUFFIX,woocall.sina.com.cn,REJECT
 DOMAIN-SUFFIX,zc.biz.weibo.com,REJECT
 DOMAIN-SUFFIX,zymo.mps.weibo.com,REJECT
+
 
 URL-REGEX,ad\d\.sina\.com,REJECT
 URL-REGEX,ad\d\.sina\.com.cn,REJECT
@@ -1374,8 +1373,10 @@ DOMAIN-KEYWORD,adnewnc,REJECT
 DOMAIN-KEYWORD,adsage,REJECT
 DOMAIN-KEYWORD,adsame,REJECT
 DOMAIN-KEYWORD,adsensor,REJECT
+DOMAIN-KEYWORD,adservice,REJECT
 DOMAIN-KEYWORD,adsmogo,REJECT
 DOMAIN-KEYWORD,adsrvmedia,REJECT
+DOMAIN-KEYWORD,adsserving,REJECT
 DOMAIN-KEYWORD,advert,REJECT
 DOMAIN-KEYWORD,adwords,REJECT
 DOMAIN-KEYWORD,allyes,REJECT
@@ -1565,6 +1566,7 @@ DOMAIN-SUFFIX,51.la,REJECT
 DOMAIN-SUFFIX,5125129.com,REJECT
 DOMAIN-SUFFIX,513hch.com,REJECT
 DOMAIN-SUFFIX,517m.cn,REJECT
+DOMAIN-SUFFIX,519397.com,REJECT
 DOMAIN-SUFFIX,51ads.com,REJECT
 DOMAIN-SUFFIX,51gxqm.com,REJECT
 DOMAIN-SUFFIX,51jumintong.com,REJECT
@@ -1661,6 +1663,7 @@ DOMAIN-SUFFIX,8le8le.com,REJECT
 DOMAIN-SUFFIX,8mfty.com,REJECT
 DOMAIN-SUFFIX,8ox.cn,REJECT
 DOMAIN-SUFFIX,911.cc,REJECT
+DOMAIN-SUFFIX,915.com,REJECT
 DOMAIN-SUFFIX,91ad.bestvogue.com,REJECT
 DOMAIN-SUFFIX,91adv.com,REJECT
 DOMAIN-SUFFIX,91hui.com,REJECT
@@ -3113,6 +3116,7 @@ DOMAIN-SUFFIX,ggdoubi.com,REJECT
 DOMAIN-SUFFIX,ggg.zj.com,REJECT
 DOMAIN-SUFFIX,ggle.lywf.me,REJECT
 DOMAIN-SUFFIX,ggmm777.com,REJECT
+DOMAIN-SUFFIX,ggmmqq.com,REJECT
 DOMAIN-SUFFIX,ggs.myzaker.com,REJECT
 DOMAIN-SUFFIX,ggw.gusuwang.com,REJECT
 DOMAIN-SUFFIX,ggw.watertu.com,REJECT
@@ -3127,7 +3131,6 @@ DOMAIN-SUFFIX,go.hangzhou.com.cn,REJECT
 DOMAIN-SUFFIX,go.mmstat.com,REJECT
 DOMAIN-SUFFIX,godloveme.cn,REJECT
 DOMAIN-SUFFIX,go-mpulse.net,REJECT
-DOMAIN-SUFFIX,googeadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlecommerce.com,REJECT
 DOMAIN-SUFFIX,googletagservices.com,REJECT
 DOMAIN-SUFFIX,gosquared.com,REJECT
@@ -3242,6 +3245,7 @@ DOMAIN-SUFFIX,hqgjcm.com,REJECT
 DOMAIN-SUFFIX,hr41.cn,REJECT
 DOMAIN-SUFFIX,hr44.com,REJECT
 DOMAIN-SUFFIX,hslyqs.com,REJECT
+DOMAIN-SUFFIX,htfmbt.com,REJECT
 DOMAIN-SUFFIX,htjsk.com,REJECT
 DOMAIN-SUFFIX,httpdns.push.oppomobile.com,REJECT
 DOMAIN-SUFFIX,huahuaka.com,REJECT
@@ -3629,6 +3633,7 @@ DOMAIN-SUFFIX,localytics.com,REJECT
 DOMAIN-SUFFIX,log.collect.yinyuetai.com,REJECT
 DOMAIN-SUFFIX,log.outbrain.com,REJECT
 DOMAIN-SUFFIX,log.spotify.com,REJECT
+DOMAIN-SUFFIX,log.tu.baixing.com,REJECT
 DOMAIN-SUFFIX,log.umsns.com,REJECT
 DOMAIN-SUFFIX,log.voicecloud.cn,REJECT
 DOMAIN-SUFFIX,logs.dashlane.com,REJECT
@@ -3783,6 +3788,7 @@ DOMAIN-SUFFIX,mini.hao123.com,REJECT
 DOMAIN-SUFFIX,mini.jijiplayer.com,REJECT
 DOMAIN-SUFFIX,minisplat.cn,REJECT
 DOMAIN-SUFFIX,miniye.xjts.cn,REJECT
+DOMAIN-SUFFIX,mipujia.com,REJECT
 DOMAIN-SUFFIX,miui.hftaili.com,REJECT
 DOMAIN-SUFFIX,mlb.did.ijinshan.com,REJECT
 DOMAIN-SUFFIX,mlgrrqymdsyk.com,REJECT
@@ -3799,6 +3805,7 @@ DOMAIN-SUFFIX,moad.cn,REJECT
 DOMAIN-SUFFIX,moatads.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,mobad.ijinshan.com,REJECT
+DOMAIN-SUFFIX,mobaders.com,REJECT
 DOMAIN-SUFFIX,mobadme.jp,REJECT
 DOMAIN-SUFFIX,mobclix.com,REJECT
 DOMAIN-SUFFIX,mobfox.com,REJECT
@@ -3897,6 +3904,7 @@ DOMAIN-SUFFIX,niuxgame77.com,REJECT
 DOMAIN-SUFFIX,njdijiani.com,REJECT
 DOMAIN-SUFFIX,njfsk.com,REJECT
 DOMAIN-SUFFIX,njq.net,REJECT
+DOMAIN-SUFFIX,njxczy.com,REJECT
 DOMAIN-SUFFIX,nkeo.top,REJECT
 DOMAIN-SUFFIX,nmbtedu.com,REJECT
 DOMAIN-SUFFIX,nmkgs.cn,REJECT
@@ -4173,6 +4181,7 @@ DOMAIN-SUFFIX,qujishu.com,REJECT
 DOMAIN-SUFFIX,qumi.com,REJECT
 DOMAIN-SUFFIX,quote.51.la,REJECT
 DOMAIN-SUFFIX,quw18.com,REJECT
+DOMAIN-SUFFIX,quyaoya.com,REJECT
 DOMAIN-SUFFIX,qxjdlf.com,REJECT
 DOMAIN-SUFFIX,qxxys.com,REJECT
 DOMAIN-SUFFIX,qyctj.com,REJECT
@@ -4364,6 +4373,7 @@ DOMAIN-SUFFIX,shenyian.net,REJECT
 DOMAIN-SUFFIX,shenyun.com,REJECT
 DOMAIN-SUFFIX,shenyun.org,REJECT
 DOMAIN-SUFFIX,shenyunperformingarts.org,REJECT
+DOMAIN-SUFFIX,shibeiou.com,REJECT
 DOMAIN-SUFFIX,shiftrro.com,REJECT
 DOMAIN-SUFFIX,shili.downxia.com,REJECT
 DOMAIN-SUFFIX,shili.wanyx.com,REJECT
@@ -4676,6 +4686,7 @@ DOMAIN-SUFFIX,tw.fgmtv.org,REJECT
 DOMAIN-SUFFIX,tw13b093.sandai.net,REJECT
 DOMAIN-SUFFIX,twb98.com,REJECT
 DOMAIN-SUFFIX,twcczhu.com,REJECT
+DOMAIN-SUFFIX,twh5.com,REJECT
 DOMAIN-SUFFIX,twinplan.com,REJECT
 DOMAIN-SUFFIX,twitterzs.com,REJECT
 DOMAIN-SUFFIX,twldmx.com,REJECT
@@ -4750,6 +4761,7 @@ DOMAIN-SUFFIX,uvclick.com,REJECT
 DOMAIN-SUFFIX,uw9377.com,REJECT
 DOMAIN-SUFFIX,uyunad.com,REJECT
 DOMAIN-SUFFIX,uzpmrbek.com,REJECT
+DOMAIN-SUFFIX,v02u9.cn,REJECT
 DOMAIN-SUFFIX,v1.log.moji.com,REJECT
 DOMAIN-SUFFIX,v2.fm.n.duokanbox.com,REJECT
 DOMAIN-SUFFIX,v2.reachmax.cn,REJECT
@@ -4945,6 +4957,7 @@ DOMAIN-SUFFIX,xiniuz.com,REJECT
 DOMAIN-SUFFIX,xinju.cc,REJECT
 DOMAIN-SUFFIX,xinray.com,REJECT
 DOMAIN-SUFFIX,xinsheng.net,REJECT
+DOMAIN-SUFFIX,xiongdong.com,REJECT
 DOMAIN-SUFFIX,xjidian.com,REJECT
 DOMAIN-SUFFIX,xk2012.com,REJECT
 DOMAIN-SUFFIX,xkwfao.com,REJECT
@@ -5112,6 +5125,7 @@ DOMAIN-SUFFIX,zeus.qj.net,REJECT
 DOMAIN-SUFFIX,zgc66.com,REJECT
 DOMAIN-SUFFIX,zgdfz6h7po.me,REJECT
 DOMAIN-SUFFIX,zgfszs.com,REJECT
+DOMAIN-SUFFIX,zgjkv.com,REJECT
 DOMAIN-SUFFIX,zgksb.com,REJECT
 DOMAIN-SUFFIX,zgty365.com,REJECT
 DOMAIN-SUFFIX,zgunion.cn,REJECT
@@ -5140,6 +5154,7 @@ DOMAIN-SUFFIX,zizcy.com,REJECT
 DOMAIN-SUFFIX,zjbdt.com,REJECT
 DOMAIN-SUFFIX,zjhim.com,REJECT
 DOMAIN-SUFFIX,zkrdy.com,REJECT
+DOMAIN-SUFFIX,zlongad.com,REJECT
 DOMAIN-SUFFIX,zo66.com,REJECT
 DOMAIN-SUFFIX,zp22938576.com,REJECT
 DOMAIN-SUFFIX,zq84.com,REJECT
@@ -6052,7 +6067,6 @@ IP-CIDR,27.0.236.0/22,DIRECT,no-resolve
 
 
 
-
 # PROXY
 
 // Client
@@ -6391,6 +6405,43 @@ syria.sy = 127.0.0.1
 
 [URL Rewrite]
 
+// Google_Service_HTTPS_Jump
+ ^https?://(www.)?g.cn https://www.google.com 302
+ ^https?://(www.)?google.cn https://www.google.com 302
+ 
+ 
+// Anti_ISP_JD_Hijack
+^https?://coupon.m.jd.com/ https://coupon.m.jd.com/ 302
+^https?://h5.m.jd.com/ https://h5.m.jd.com/ 302
+^https?://item.m.jd.com/ https://item.m.jd.com/ 302
+^https?://m.jd.com https://m.jd.com 302
+^https?://newcz.m.jd.com/ https://newcz.m.jd.com/ 302
+^https?://p.m.jd.com/ https://p.m.jd.com/ 302
+^https?://so.m.jd.com/ https://so.m.jd.com/ 302
+^https?://union.click.jd.com/jda? http://union.click.jd.com/jda?adblock= header
+^https?://union.click.jd.com/sem.php? http://union.click.jd.com/sem.php?adblock= header
+^https?://www.jd.com/ https://www.jd.com/ 302
+
+// Anti_ISP_Taobao_Hijack
+^https?://m.taobao.com/ https://m.taobao.com/ 302
+
+// Wiki
+^https?://.+.(m.)?wikipedia.org/wiki http://www.wikiwand.com/en 302
+^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
+^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
+
+// Other
+^https?://cfg.m.ttkvod.com/mobile/ttk_mobile_1.8.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
+^https?://cnzz.com/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
+^https?://issuecdn.baidupcs.com/issue/netdisk/guanggao/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
+^https?://m.qu.la/stylewap/js/wap.js http://ogtre5vp0.bkt.clouddn.com/qu_la_wap.js 302
+^https?://m.yhd.com/1/? http://m.yhd.com/1/?adbock= 302
+^https?://n.mark.letv.com/m3u8api/ http://burpsuite.applinzi.com/Interface header
+^https?://sqimg.qq.com/ https://sqimg.qq.com/ 302
+^https?://static.m.ttkvod.com/static_cahce/index/index.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/index.txt header
+^https?://www.iqshw.com/d/js/m http://burpsuite.applinzi.com/Interface header
+^https?://www.iqshw.com/d/js/m http://rewrite.websocket.site:10/Other/Static/JS/Package.js? header
+ 
 
 // Anti_ISP_JavaScript_Injection
 ^https?://101.251.211.235 - reject
@@ -6898,9 +6949,14 @@ syria.sy = 127.0.0.1
 // Jiatu
 ^https?://images.kartor.cn/.+.html - reject
 
+// Ecitic bank
+ ^https?://wap.bank.ecitic.com/NMBFOServer/cbframework.do\?act=\w+ - reject
+ 
+ // Dongka kongjian
+ ^https?://m.creditcard.ecitic.com/citiccard/mbk/appspace-client/cr/sys/popAdv - reject
 
 // Other
-^https?://[^(apple|10010)]+\.(com|cn)/ad(s|v)?(/|.js) - reject
+^https?://[^(apple|10010)]+\.(com|cn)/(a|A)d(s|v)?(/|.js) - reject
 
 ^https?://.+allOne.php\?ad_name=main_splash_ios - reject
 ^https?://.+nga.cn.+\bhome.+\b=ad - reject
@@ -6932,45 +6988,6 @@ syria.sy = 127.0.0.1
 
 
 
-
-// Google_Service_HTTPS_Jump
-^https?://(www.)?g.cn https://www.google.com 302
-^https?://(www.)?google.cn https://www.google.com 302
-
-
-// Anti_ISP_JD_Hijack
-^https?://coupon.m.jd.com/ https://coupon.m.jd.com/ 302
-^https?://h5.m.jd.com/ https://h5.m.jd.com/ 302
-^https?://item.m.jd.com/ https://item.m.jd.com/ 302
-^https?://m.jd.com https://m.jd.com 302
-^https?://newcz.m.jd.com/ https://newcz.m.jd.com/ 302
-^https?://p.m.jd.com/ https://p.m.jd.com/ 302
-^https?://so.m.jd.com/ https://so.m.jd.com/ 302
-^https?://union.click.jd.com/jda? http://union.click.jd.com/jda?adblock= header
-^https?://union.click.jd.com/sem.php? http://union.click.jd.com/sem.php?adblock= header
-^https?://www.jd.com/ https://www.jd.com/ 302
-
-// Anti_ISP_Taobao_Hijack
-^https?://m.taobao.com/ https://m.taobao.com/ 302
-
-// Wiki
-^https?://.+.(m.)?wikipedia.org/wiki http://www.wikiwand.com/en 302
-^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
-^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
-
-// Other
-^https?://cfg.m.ttkvod.com/mobile/ttk_mobile_1.8.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
-^https?://cnzz.com/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
-^https?://issuecdn.baidupcs.com/issue/netdisk/guanggao/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
-^https?://m.qu.la/stylewap/js/wap.js http://ogtre5vp0.bkt.clouddn.com/qu_la_wap.js 302
-^https?://m.yhd.com/1/? http://m.yhd.com/1/?adbock= 302
-^https?://n.mark.letv.com/m3u8api/ http://burpsuite.applinzi.com/Interface header
-^https?://sqimg.qq.com/ https://sqimg.qq.com/ 302
-^https?://static.m.ttkvod.com/static_cahce/index/index.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/index.txt header
-^https?://www.iqshw.com/d/js/m http://burpsuite.applinzi.com/Interface header
-^https?://www.iqshw.com/d/js/m http://rewrite.websocket.site:10/Other/Static/JS/Package.js? header
-
-
 [Header Rewrite]
 ^*.bdimg.com header-del Referer
 ^*.qpic.cn header-replace User-Agent WeChat/6.5.22.32 CFNetwork/889.9 Darwin/17.2.0
@@ -6980,7 +6997,7 @@ syria.sy = 127.0.0.1
 ^*.cnbetacdn.com header-del Referer
 ^*.zhiding.cn header-del Referer
 ^*.c114.com.cn header-del Referer
-^http://www.biquge.com.tw header-del Cookie
+^https?://www.biquge.com.tw header-del Cookie
 ^https?://www.zhihu.com/question/ header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.45 Safari/537.36
 
 
