Sync for lhie1's Quantumult.conf #25

--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年4月18日 14:50 UTC/GMT +9
+# 2018年4月21日 13:55 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。找到选项，左滑选择【Replace】，然后【OK】。
 
@@ -104,7 +104,6 @@ DOMAIN-SUFFIX,gamecenter.iqiyi.com,REJECT
 DOMAIN-SUFFIX,hotchat-im.iqiyi.com,REJECT
 DOMAIN-SUFFIX,ifacelog.iqiyi.com,REJECT
 DOMAIN-SUFFIX,mbdlog.iqiyi.com,REJECT
-DOMAIN-SUFFIX,msg.71.am,REJECT
 DOMAIN-SUFFIX,msg.video.qiyi.com,REJECT
 DOMAIN-SUFFIX,msg2.video.qiyi.com,REJECT
 DOMAIN-SUFFIX,msga.cupid.iqiyi.com,REJECT
@@ -611,6 +610,7 @@ DOMAIN-SUFFIX,dxp.baidu.com,REJECT
 DOMAIN-SUFFIX,dzl.baidu.com,REJECT
 DOMAIN-SUFFIX,eclick.baidu.com,REJECT
 DOMAIN-SUFFIX,eiv.baidu.com,REJECT
+DOMAIN-SUFFIX,em.baidu.com,REJECT
 DOMAIN-SUFFIX,entry.baidu.com,REJECT
 DOMAIN-SUFFIX,ers.baidu.com,REJECT
 DOMAIN-SUFFIX,f10.baidu.com,REJECT
@@ -762,8 +762,6 @@ DOMAIN-SUFFIX,ads.google.com,REJECT
 DOMAIN-SUFFIX,afd.l.google.com,REJECT
 DOMAIN-SUFFIX,doubleclick.com,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
-DOMAIN-SUFFIX,googleadservices.com,REJECT
-DOMAIN-SUFFIX,googleadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlesyndication.com,REJECT
 DOMAIN-SUFFIX,googletagmanager.com,REJECT
 DOMAIN-SUFFIX,googletakes.com,REJECT
@@ -783,7 +781,6 @@ DOMAIN-SUFFIX,img-x.jd.com,REJECT
 // Kugou
 DOMAIN-SUFFIX,ads.bssdl.kugou.com,REJECT
 DOMAIN-SUFFIX,ads.service.kugou.com,REJECT
-DOMAIN-SUFFIX,adserviceretry.kugou.com,REJECT
 DOMAIN-SUFFIX,adsfile.bssdlbig.kugou.com,REJECT
 DOMAIN-SUFFIX,channel.fanxing.kugou.com,REJECT
 DOMAIN-SUFFIX,d.kugou.com,REJECT
@@ -942,6 +939,7 @@ DOMAIN-SUFFIX,int.dpool.sina.com.cn,REJECT
 DOMAIN-SUFFIX,interest.mix.sina.com.cn,REJECT
 DOMAIN-SUFFIX,log.interest.mix.sina.com.cn,REJECT
 DOMAIN-SUFFIX,log.mix.sina.com.cn,REJECT
+DOMAIN-SUFFIX,log.sina.cn,REJECT
 DOMAIN-SUFFIX,m.beacon.sina.com.cn,REJECT
 DOMAIN-SUFFIX,m.game.weibo.cn,REJECT
 DOMAIN-SUFFIX,mg.games.sina.com.cn,REJECT
@@ -960,6 +958,7 @@ DOMAIN-SUFFIX,rm.sina.com.cn,REJECT
 DOMAIN-SUFFIX,rs.sinajs.cn,REJECT
 DOMAIN-SUFFIX,s.alitui.weibo.com,REJECT
 DOMAIN-SUFFIX,s.img.mix.sina.com.cn,REJECT
+DOMAIN-SUFFIX,sapi.sina.cn,REJECT
 DOMAIN-SUFFIX,sax.sina.cn,REJECT
 DOMAIN-SUFFIX,sax.sina.com.cn,REJECT
 DOMAIN-SUFFIX,saxn.sina.com.cn,REJECT
@@ -1397,8 +1396,10 @@ DOMAIN-KEYWORD,adnewnc,REJECT
 DOMAIN-KEYWORD,adsage,REJECT
 DOMAIN-KEYWORD,adsame,REJECT
 DOMAIN-KEYWORD,adsensor,REJECT
+DOMAIN-KEYWORD,adservice,REJECT
 DOMAIN-KEYWORD,adsmogo,REJECT
 DOMAIN-KEYWORD,adsrvmedia,REJECT
+DOMAIN-KEYWORD,adsserving,REJECT
 DOMAIN-KEYWORD,advert,REJECT
 DOMAIN-KEYWORD,adwords,REJECT
 DOMAIN-KEYWORD,allyes,REJECT
@@ -1588,6 +1589,7 @@ DOMAIN-SUFFIX,51.la,REJECT
 DOMAIN-SUFFIX,5125129.com,REJECT
 DOMAIN-SUFFIX,513hch.com,REJECT
 DOMAIN-SUFFIX,517m.cn,REJECT
+DOMAIN-SUFFIX,519397.com,REJECT
 DOMAIN-SUFFIX,51ads.com,REJECT
 DOMAIN-SUFFIX,51gxqm.com,REJECT
 DOMAIN-SUFFIX,51jumintong.com,REJECT
@@ -1684,6 +1686,7 @@ DOMAIN-SUFFIX,8le8le.com,REJECT
 DOMAIN-SUFFIX,8mfty.com,REJECT
 DOMAIN-SUFFIX,8ox.cn,REJECT
 DOMAIN-SUFFIX,911.cc,REJECT
+DOMAIN-SUFFIX,915.com,REJECT
 DOMAIN-SUFFIX,91ad.bestvogue.com,REJECT
 DOMAIN-SUFFIX,91adv.com,REJECT
 DOMAIN-SUFFIX,91hui.com,REJECT
@@ -3136,6 +3139,7 @@ DOMAIN-SUFFIX,ggdoubi.com,REJECT
 DOMAIN-SUFFIX,ggg.zj.com,REJECT
 DOMAIN-SUFFIX,ggle.lywf.me,REJECT
 DOMAIN-SUFFIX,ggmm777.com,REJECT
+DOMAIN-SUFFIX,ggmmqq.com,REJECT
 DOMAIN-SUFFIX,ggs.myzaker.com,REJECT
 DOMAIN-SUFFIX,ggw.gusuwang.com,REJECT
 DOMAIN-SUFFIX,ggw.watertu.com,REJECT
@@ -3150,7 +3154,6 @@ DOMAIN-SUFFIX,go.hangzhou.com.cn,REJECT
 DOMAIN-SUFFIX,go.mmstat.com,REJECT
 DOMAIN-SUFFIX,godloveme.cn,REJECT
 DOMAIN-SUFFIX,go-mpulse.net,REJECT
-DOMAIN-SUFFIX,googeadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlecommerce.com,REJECT
 DOMAIN-SUFFIX,googletagservices.com,REJECT
 DOMAIN-SUFFIX,gosquared.com,REJECT
@@ -3265,6 +3268,7 @@ DOMAIN-SUFFIX,hqgjcm.com,REJECT
 DOMAIN-SUFFIX,hr41.cn,REJECT
 DOMAIN-SUFFIX,hr44.com,REJECT
 DOMAIN-SUFFIX,hslyqs.com,REJECT
+DOMAIN-SUFFIX,htfmbt.com,REJECT
 DOMAIN-SUFFIX,htjsk.com,REJECT
 DOMAIN-SUFFIX,httpdns.push.oppomobile.com,REJECT
 DOMAIN-SUFFIX,huahuaka.com,REJECT
@@ -3652,6 +3656,7 @@ DOMAIN-SUFFIX,localytics.com,REJECT
 DOMAIN-SUFFIX,log.collect.yinyuetai.com,REJECT
 DOMAIN-SUFFIX,log.outbrain.com,REJECT
 DOMAIN-SUFFIX,log.spotify.com,REJECT
+DOMAIN-SUFFIX,log.tu.baixing.com,REJECT
 DOMAIN-SUFFIX,log.umsns.com,REJECT
 DOMAIN-SUFFIX,log.voicecloud.cn,REJECT
 DOMAIN-SUFFIX,logs.dashlane.com,REJECT
@@ -3806,6 +3811,7 @@ DOMAIN-SUFFIX,mini.hao123.com,REJECT
 DOMAIN-SUFFIX,mini.jijiplayer.com,REJECT
 DOMAIN-SUFFIX,minisplat.cn,REJECT
 DOMAIN-SUFFIX,miniye.xjts.cn,REJECT
+DOMAIN-SUFFIX,mipujia.com,REJECT
 DOMAIN-SUFFIX,miui.hftaili.com,REJECT
 DOMAIN-SUFFIX,mlb.did.ijinshan.com,REJECT
 DOMAIN-SUFFIX,mlgrrqymdsyk.com,REJECT
@@ -3822,6 +3828,7 @@ DOMAIN-SUFFIX,moad.cn,REJECT
 DOMAIN-SUFFIX,moatads.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,mobad.ijinshan.com,REJECT
+DOMAIN-SUFFIX,mobaders.com,REJECT
 DOMAIN-SUFFIX,mobadme.jp,REJECT
 DOMAIN-SUFFIX,mobclix.com,REJECT
 DOMAIN-SUFFIX,mobfox.com,REJECT
@@ -3920,6 +3927,7 @@ DOMAIN-SUFFIX,niuxgame77.com,REJECT
 DOMAIN-SUFFIX,njdijiani.com,REJECT
 DOMAIN-SUFFIX,njfsk.com,REJECT
 DOMAIN-SUFFIX,njq.net,REJECT
+DOMAIN-SUFFIX,njxczy.com,REJECT
 DOMAIN-SUFFIX,nkeo.top,REJECT
 DOMAIN-SUFFIX,nmbtedu.com,REJECT
 DOMAIN-SUFFIX,nmkgs.cn,REJECT
@@ -4196,6 +4204,7 @@ DOMAIN-SUFFIX,qujishu.com,REJECT
 DOMAIN-SUFFIX,qumi.com,REJECT
 DOMAIN-SUFFIX,quote.51.la,REJECT
 DOMAIN-SUFFIX,quw18.com,REJECT
+DOMAIN-SUFFIX,quyaoya.com,REJECT
 DOMAIN-SUFFIX,qxjdlf.com,REJECT
 DOMAIN-SUFFIX,qxxys.com,REJECT
 DOMAIN-SUFFIX,qyctj.com,REJECT
@@ -4387,6 +4396,7 @@ DOMAIN-SUFFIX,shenyian.net,REJECT
 DOMAIN-SUFFIX,shenyun.com,REJECT
 DOMAIN-SUFFIX,shenyun.org,REJECT
 DOMAIN-SUFFIX,shenyunperformingarts.org,REJECT
+DOMAIN-SUFFIX,shibeiou.com,REJECT
 DOMAIN-SUFFIX,shiftrro.com,REJECT
 DOMAIN-SUFFIX,shili.downxia.com,REJECT
 DOMAIN-SUFFIX,shili.wanyx.com,REJECT
@@ -4699,6 +4709,7 @@ DOMAIN-SUFFIX,tw.fgmtv.org,REJECT
 DOMAIN-SUFFIX,tw13b093.sandai.net,REJECT
 DOMAIN-SUFFIX,twb98.com,REJECT
 DOMAIN-SUFFIX,twcczhu.com,REJECT
+DOMAIN-SUFFIX,twh5.com,REJECT
 DOMAIN-SUFFIX,twinplan.com,REJECT
 DOMAIN-SUFFIX,twitterzs.com,REJECT
 DOMAIN-SUFFIX,twldmx.com,REJECT
@@ -4773,6 +4784,7 @@ DOMAIN-SUFFIX,uvclick.com,REJECT
 DOMAIN-SUFFIX,uw9377.com,REJECT
 DOMAIN-SUFFIX,uyunad.com,REJECT
 DOMAIN-SUFFIX,uzpmrbek.com,REJECT
+DOMAIN-SUFFIX,v02u9.cn,REJECT
 DOMAIN-SUFFIX,v1.log.moji.com,REJECT
 DOMAIN-SUFFIX,v2.fm.n.duokanbox.com,REJECT
 DOMAIN-SUFFIX,v2.reachmax.cn,REJECT
@@ -4968,6 +4980,7 @@ DOMAIN-SUFFIX,xiniuz.com,REJECT
 DOMAIN-SUFFIX,xinju.cc,REJECT
 DOMAIN-SUFFIX,xinray.com,REJECT
 DOMAIN-SUFFIX,xinsheng.net,REJECT
+DOMAIN-SUFFIX,xiongdong.com,REJECT
 DOMAIN-SUFFIX,xjidian.com,REJECT
 DOMAIN-SUFFIX,xk2012.com,REJECT
 DOMAIN-SUFFIX,xkwfao.com,REJECT
@@ -5135,6 +5148,7 @@ DOMAIN-SUFFIX,zeus.qj.net,REJECT
 DOMAIN-SUFFIX,zgc66.com,REJECT
 DOMAIN-SUFFIX,zgdfz6h7po.me,REJECT
 DOMAIN-SUFFIX,zgfszs.com,REJECT
+DOMAIN-SUFFIX,zgjkv.com,REJECT
 DOMAIN-SUFFIX,zgksb.com,REJECT
 DOMAIN-SUFFIX,zgty365.com,REJECT
 DOMAIN-SUFFIX,zgunion.cn,REJECT
@@ -5163,6 +5177,7 @@ DOMAIN-SUFFIX,zizcy.com,REJECT
 DOMAIN-SUFFIX,zjbdt.com,REJECT
 DOMAIN-SUFFIX,zjhim.com,REJECT
 DOMAIN-SUFFIX,zkrdy.com,REJECT
+DOMAIN-SUFFIX,zlongad.com,REJECT
 DOMAIN-SUFFIX,zo66.com,REJECT
 DOMAIN-SUFFIX,zp22938576.com,REJECT
 DOMAIN-SUFFIX,zq84.com,REJECT
@@ -5282,6 +5297,7 @@ USER-AGENT,WhatsApp*,DIRECT
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
 DOMAIN-SUFFIX,goo.gl,DIRECT
+DOMAIN-SUFFIX,gvt1.com,DIRECT
 DOMAIN-SUFFIX,youtu.be,DIRECT
 DOMAIN-SUFFIX,ytimg.com,DIRECT
 DOMAIN-SUFFIX,ggpht.com,DIRECT
@@ -6170,6 +6186,7 @@ DOMAIN-KEYWORD,appledaily,DIRECT
 DOMAIN-KEYWORD,beetalk,DIRECT
 DOMAIN-KEYWORD,blogspot,DIRECT
 DOMAIN-KEYWORD,dropbox,DIRECT
+DOMAIN-KEYWORD,spotify,DIRECT
 DOMAIN-KEYWORD,telegram,DIRECT
 DOMAIN-KEYWORD,whatsapp,DIRECT
 
