--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,4 +1,4 @@
-# 2018年4月21日 13:30 UTC/GMT +9
+# 2018年4月22日 00:43 UTC/GMT +9
 
 [General]
 bypass-system = true
@@ -676,15 +676,19 @@ DOMAIN-SUFFIX,adm.easou.com,REJECT
 DOMAIN-SUFFIX,aishowbger.com,REJECT
 DOMAIN-SUFFIX,assets.easou.com,REJECT
 DOMAIN-SUFFIX,cj.qidian.com,REJECT
+DOMAIN-SUFFIX,dkeyn.com,REJECT
 DOMAIN-SUFFIX,drdwy.com,REJECT
+DOMAIN-SUFFIX,e.aa985.cn,REJECT
 DOMAIN-SUFFIX,e.v02u9.cn,REJECT
 DOMAIN-SUFFIX,e701.net,REJECT
 DOMAIN-SUFFIX,ethod.gzgmjcx.com,REJECT
+DOMAIN-SUFFIX,focuscat.com,REJECT
 DOMAIN-SUFFIX,game.qidian.com,REJECT
 DOMAIN-SUFFIX,jisucn.com,REJECT
 DOMAIN-SUFFIX,jyd.fjzdmy.com,REJECT
 DOMAIN-SUFFIX,m.ourlj.com,REJECT
 DOMAIN-SUFFIX,m.txtxr.com,REJECT
+DOMAIN-SUFFIX,m.vsxet.com,REJECT
 DOMAIN-SUFFIX,o.if.qidian.com,REJECT
 DOMAIN-SUFFIX,p.vq6nsu.cn,REJECT
 DOMAIN-SUFFIX,picture.duokan.com,REJECT
@@ -2182,6 +2186,7 @@ DOMAIN-SUFFIX,appdriver.cn,REJECT
 DOMAIN-SUFFIX,appdriver.com.cn,REJECT
 DOMAIN-SUFFIX,appget.cn,REJECT
 DOMAIN-SUFFIX,applifier.com,REJECT
+DOMAIN-SUFFIX,appnext.com,REJECT
 DOMAIN-SUFFIX,apppic.yingyongbei.com,REJECT
 DOMAIN-SUFFIX,appsdk.tanv.com,REJECT
 DOMAIN-SUFFIX,appservices.comcsoft.com,REJECT
@@ -6340,6 +6345,7 @@ DOMAIN-SUFFIX,weiphone.com,PROXY
 DOMAIN-SUFFIX,weiphone.net,PROXY
 DOMAIN-SUFFIX,windowsupdate.com,PROXY
 DOMAIN-SUFFIX,workflowy.com,PROXY
+DOMAIN-SUFFIX,xbiquge.cc,PROXY
 DOMAIN-SUFFIX,xdrig.com,PROXY
 DOMAIN-SUFFIX,xiami.com,PROXY
 DOMAIN-SUFFIX,xiami.net,PROXY
