Sync for lhie1's Quantumult.conf #26

--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年4月21日 13:55 UTC/GMT +9
+# 2018年4月22日 01:00 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。找到选项，左滑选择【Replace】，然后【OK】。
 
@@ -699,15 +699,19 @@ DOMAIN-SUFFIX,adm.easou.com,REJECT
 DOMAIN-SUFFIX,aishowbger.com,REJECT
 DOMAIN-SUFFIX,assets.easou.com,REJECT
 DOMAIN-SUFFIX,cj.qidian.com,REJECT
+DOMAIN-SUFFIX,dkeyn.com,REJECT
 DOMAIN-SUFFIX,drdwy.com,REJECT
+DOMAIN-SUFFIX,e.aa985.cn,REJECT
 DOMAIN-SUFFIX,e.v02u9.cn,REJECT
 DOMAIN-SUFFIX,e701.net,REJECT
 DOMAIN-SUFFIX,ethod.gzgmjcx.com,REJECT
+DOMAIN-SUFFIX,focuscat.com,REJECT
 DOMAIN-SUFFIX,game.qidian.com,REJECT
 DOMAIN-SUFFIX,jisucn.com,REJECT
 DOMAIN-SUFFIX,jyd.fjzdmy.com,REJECT
 DOMAIN-SUFFIX,m.ourlj.com,REJECT
 DOMAIN-SUFFIX,m.txtxr.com,REJECT
+DOMAIN-SUFFIX,m.vsxet.com,REJECT
 DOMAIN-SUFFIX,o.if.qidian.com,REJECT
 DOMAIN-SUFFIX,p.vq6nsu.cn,REJECT
 DOMAIN-SUFFIX,picture.duokan.com,REJECT
@@ -2205,6 +2209,7 @@ DOMAIN-SUFFIX,appdriver.cn,REJECT
 DOMAIN-SUFFIX,appdriver.com.cn,REJECT
 DOMAIN-SUFFIX,appget.cn,REJECT
 DOMAIN-SUFFIX,applifier.com,REJECT
+DOMAIN-SUFFIX,appnext.com,REJECT
 DOMAIN-SUFFIX,apppic.yingyongbei.com,REJECT
 DOMAIN-SUFFIX,appsdk.tanv.com,REJECT
 DOMAIN-SUFFIX,appservices.comcsoft.com,REJECT
@@ -6123,6 +6128,7 @@ DOMAIN-SUFFIX,weico.cc,PROXY
 DOMAIN-SUFFIX,weiphone.com,PROXY
 DOMAIN-SUFFIX,weiphone.net,PROXY
 DOMAIN-SUFFIX,workflowy.com,PROXY
+DOMAIN-SUFFIX,xbiquge.cc,PROXY
 DOMAIN-SUFFIX,xdrig.com,PROXY
 DOMAIN-SUFFIX,xiami.com,PROXY
 DOMAIN-SUFFIX,xiami.net,PROXY
@@ -6178,6 +6184,7 @@ DOMAIN-KEYWORD,blogspot,DIRECT
 DOMAIN-KEYWORD,fbcdn,DIRECT
 DOMAIN-KEYWORD,facebook,DIRECT
 DOMAIN-KEYWORD,instagram,DIRECT
+DOMAIN-KEYWORD,spotify,DIRECT
 DOMAIN-KEYWORD,twitter,DIRECT
 DOMAIN-KEYWORD,twimg,DIRECT
 
@@ -6186,7 +6193,6 @@ DOMAIN-KEYWORD,appledaily,DIRECT
 DOMAIN-KEYWORD,beetalk,DIRECT
 DOMAIN-KEYWORD,blogspot,DIRECT
 DOMAIN-KEYWORD,dropbox,DIRECT
-DOMAIN-KEYWORD,spotify,DIRECT
 DOMAIN-KEYWORD,telegram,DIRECT
 DOMAIN-KEYWORD,whatsapp,DIRECT
 
