--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -538,9 +538,6 @@ DOMAIN-SUFFIX,afd.baidu.com,REJECT
 DOMAIN-SUFFIX,als.baidu.com,REJECT
 DOMAIN-SUFFIX,anquan.baidu.com,REJECT
 DOMAIN-SUFFIX,antivirus.baidu.com,REJECT
-DOMAIN-SUFFIX,api.cpu.baidu.com,REJECT
-DOMAIN-SUFFIX,api.share.baidu.com,REJECT
-DOMAIN-SUFFIX,api.tuisong.baidu.com,REJECT
 DOMAIN-SUFFIX,appc.baidu.com,REJECT
 DOMAIN-SUFFIX,baichuan.baidu.com,REJECT
 DOMAIN-SUFFIX,baidutv.baidu.com,REJECT
@@ -1096,8 +1093,6 @@ DOMAIN-SUFFIX,lives.l.qq.com,REJECT
 DOMAIN-SUFFIX,log.tbs.qq.com,REJECT
 DOMAIN-SUFFIX,ls.l.qq.com,REJECT
 DOMAIN-SUFFIX,mapp.qzone.qq.com,REJECT
-DOMAIN-SUFFIX,masdk.3g.qq.com,REJECT
-DOMAIN-SUFFIX,mazu.3g.qq.com,REJECT
 DOMAIN-SUFFIX,mcgi.v.qq.com,REJECT
 DOMAIN-SUFFIX,mdevstat.qqlive.qq.com,REJECT
 DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
@@ -6371,6 +6366,7 @@ DOMAIN-SUFFIX,zealer.com,PROXY
 DOMAIN-SUFFIX,zgslb.net,PROXY
 DOMAIN-SUFFIX,zhihu.com,PROXY
 DOMAIN-SUFFIX,zhimg.com,PROXY
+DOMAIN-SUFFIX,zmz002.com,PROXY
 DOMAIN-SUFFIX,zimuzu.tv,PROXY
 
 // Accelerate direct sites
@@ -6956,10 +6952,13 @@ syria.sy = 127.0.0.1
 ^https?://images.kartor.cn/.+.html - reject
 
 // Ecitic bank
- ^https?://wap.bank.ecitic.com/NMBFOServer/cbframework.do\?act=\w+ - reject
+^https?://wap.bank.ecitic.com/NMBFOServer/cbframework.do\?act=\w+ - reject
  
- // Dongka kongjian
- ^https?://m.creditcard.ecitic.com/citiccard/mbk/appspace-client/cr/sys/popAdv - reject
+// Dongka kongjian
+^https?://m.creditcard.ecitic.com/citiccard/mbk/appspace-client/cr/sys/popAdv - reject
+
+// Haoqixin ribao
+^https?://app3.qdaily.com/app3/boot_advertisements.json - reject
 
 // Other
 ^https?://[^(apple|10010)]+\.(com|cn)/(a|A)d(s|v)?(/|.js) - reject
