Sync for lhie1's Quantumult.conf #28

--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年4月22日 01:00 UTC/GMT +9
+# 2018年4月23日 01:19 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。找到选项，左滑选择【Replace】，然后【OK】。
 
@@ -561,9 +561,6 @@ DOMAIN-SUFFIX,afd.baidu.com,REJECT
 DOMAIN-SUFFIX,als.baidu.com,REJECT
 DOMAIN-SUFFIX,anquan.baidu.com,REJECT
 DOMAIN-SUFFIX,antivirus.baidu.com,REJECT
-DOMAIN-SUFFIX,api.cpu.baidu.com,REJECT
-DOMAIN-SUFFIX,api.share.baidu.com,REJECT
-DOMAIN-SUFFIX,api.tuisong.baidu.com,REJECT
 DOMAIN-SUFFIX,appc.baidu.com,REJECT
 DOMAIN-SUFFIX,baichuan.baidu.com,REJECT
 DOMAIN-SUFFIX,baidutv.baidu.com,REJECT
@@ -1119,8 +1116,6 @@ DOMAIN-SUFFIX,lives.l.qq.com,REJECT
 DOMAIN-SUFFIX,log.tbs.qq.com,REJECT
 DOMAIN-SUFFIX,ls.l.qq.com,REJECT
 DOMAIN-SUFFIX,mapp.qzone.qq.com,REJECT
-DOMAIN-SUFFIX,masdk.3g.qq.com,REJECT
-DOMAIN-SUFFIX,mazu.3g.qq.com,REJECT
 DOMAIN-SUFFIX,mcgi.v.qq.com,REJECT
 DOMAIN-SUFFIX,mdevstat.qqlive.qq.com,REJECT
 DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
@@ -6154,6 +6149,7 @@ DOMAIN-SUFFIX,zealer.com,PROXY
 DOMAIN-SUFFIX,zgslb.net,PROXY
 DOMAIN-SUFFIX,zhihu.com,PROXY
 DOMAIN-SUFFIX,zhimg.com,PROXY
+DOMAIN-SUFFIX,zmz002.com,PROXY
 DOMAIN-SUFFIX,zimuzu.tv,PROXY
 
 // Prior
