--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,4 +1,4 @@
-# 2018年4月23日 01:14 UTC/GMT +9
+# 2018年4月24日 20:00 UTC/GMT +9
 
 [General]
 bypass-system = true
@@ -281,6 +281,7 @@ DOMAIN-SUFFIX,gorgon.youdao.com,REJECT
 DOMAIN-SUFFIX,haitaoad.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,i.clkservice.youdao.com,REJECT
 DOMAIN-SUFFIX,iad.g.163.com,REJECT
+DOMAIN-SUFFIX,iadmat.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,img1.126.net,REJECT
 DOMAIN-SUFFIX,img2.126.net,REJECT
 DOMAIN-SUFFIX,impservice.chnl.youdao.com,REJECT
@@ -1797,6 +1798,7 @@ DOMAIN-SUFFIX,ad.about.co.kr,REJECT
 DOMAIN-SUFFIX,ad.accessmediaproductions.com,REJECT
 DOMAIN-SUFFIX,ad.adhouyi.cn,REJECT
 DOMAIN-SUFFIX,ad.adwo.com,REJECT
+DOMAIN-SUFFIX,ad.aidalan.com,REJECT
 DOMAIN-SUFFIX,ad.api.3g.tudou.com,REJECT
 DOMAIN-SUFFIX,ad.bitmedia.io,REJECT
 DOMAIN-SUFFIX,ad.bjmama.net,REJECT
@@ -2196,6 +2198,7 @@ DOMAIN-SUFFIX,arealx.com,REJECT
 DOMAIN-SUFFIX,as.inbox.com,REJECT
 DOMAIN-SUFFIX,as.sinahk.net,REJECT
 DOMAIN-SUFFIX,as.trklinklog.com,REJECT
+DOMAIN-SUFFIX,as.yuewz.com,REJECT
 DOMAIN-SUFFIX,asd.projectfreetv.so,REJECT
 DOMAIN-SUFFIX,ashow.pcpop.com,REJECT
 DOMAIN-SUFFIX,assets.210189.com,REJECT
@@ -3339,6 +3342,7 @@ DOMAIN-SUFFIX,img.9duw.com,REJECT
 DOMAIN-SUFFIX,img.ad.zhangyue.com,REJECT
 DOMAIN-SUFFIX,img.adpush.cn,REJECT
 DOMAIN-SUFFIX,img.dawenxue.org,REJECT
+DOMAIN-SUFFIX,img.khlxw.com,REJECT
 DOMAIN-SUFFIX,img.libdd.com,REJECT
 DOMAIN-SUFFIX,img.meipic.net,REJECT
 DOMAIN-SUFFIX,img.qdscgj.com,REJECT
@@ -3485,6 +3489,7 @@ DOMAIN-SUFFIX,js1.2abc8.com,REJECT
 DOMAIN-SUFFIX,js1.xbaixing.com,REJECT
 DOMAIN-SUFFIX,js1.zuocai.tv,REJECT
 DOMAIN-SUFFIX,js3.users.51.la,REJECT
+DOMAIN-SUFFIX,js.wo-x.cn,REJECT
 DOMAIN-SUFFIX,js883.hnfpgm.com,REJECT
 DOMAIN-SUFFIX,jsadt.com,REJECT
 DOMAIN-SUFFIX,js-agent.newrelic.com,REJECT
@@ -4755,6 +4760,7 @@ DOMAIN-SUFFIX,usingde.com,REJECT
 DOMAIN-SUFFIX,uss-pid.lenovomm.com,REJECT
 DOMAIN-SUFFIX,usync.aws.rubiconproject.com,REJECT
 DOMAIN-SUFFIX,utility.rogersmedia.com,REJECT
+DOMAIN-SUFFIX,uu.feipukeplus.com,REJECT
 DOMAIN-SUFFIX,uuidapi.yunos.com,REJECT
 DOMAIN-SUFFIX,uulucky.com,REJECT
 DOMAIN-SUFFIX,uvclick.com,REJECT
@@ -6168,6 +6174,7 @@ DOMAIN-SUFFIX,aliyun.com,PROXY
 DOMAIN-SUFFIX,amap.com,PROXY
 DOMAIN-SUFFIX,analytics.126.net,PROXY
 DOMAIN-SUFFIX,apache.org,PROXY
+DOMAIN-SUFFIX,api.crisp.chat,PROXY
 DOMAIN-SUFFIX,appshike.com,PROXY
 DOMAIN-SUFFIX,appstore.com,PROXY
 DOMAIN-SUFFIX,autonavi.com,PROXY
@@ -6194,6 +6201,7 @@ DOMAIN-SUFFIX,cnbeta.com,PROXY
 DOMAIN-SUFFIX,cnbetacdn.com,PROXY
 DOMAIN-SUFFIX,conoha.jp,PROXY
 DOMAIN-SUFFIX,culturedcode.com,PROXY
+DOMAIN-SUFFIX,dct-cloud.com,PROXY
 DOMAIN-SUFFIX,didialift.com,PROXY
 DOMAIN-SUFFIX,douban.com,PROXY
 DOMAIN-SUFFIX,doubanio.com,PROXY
@@ -6352,6 +6360,7 @@ DOMAIN-SUFFIX,ximalaya.com,PROXY
 DOMAIN-SUFFIX,xitek.com,PROXY
 DOMAIN-SUFFIX,xmcdn.com,PROXY
 DOMAIN-SUFFIX,xslb.net,PROXY
+DOMAIN-SUFFIX,xteko.com,PROXY
 DOMAIN-SUFFIX,xunlei.com,PROXY
 DOMAIN-SUFFIX,yach.me,PROXY
 DOMAIN-SUFFIX,yeepay.com,PROXY
