Sync for lhie1's Quantumult.conf #29

--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,6 +1,7 @@
-# 2018年4月23日 01:19 UTC/GMT +9
+# 2018年4月24日 20:09 UTC/GMT +9
 
-#【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。找到选项，左滑选择【Replace】，然后【OK】。
+#【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。
+# 找到选项，左滑选择【Replace】，然后【OK】。
 
 [SERVER]
 
@@ -304,6 +305,7 @@ DOMAIN-SUFFIX,gorgon.youdao.com,REJECT
 DOMAIN-SUFFIX,haitaoad.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,i.clkservice.youdao.com,REJECT
 DOMAIN-SUFFIX,iad.g.163.com,REJECT
+DOMAIN-SUFFIX,iadmat.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,img1.126.net,REJECT
 DOMAIN-SUFFIX,img2.126.net,REJECT
 DOMAIN-SUFFIX,impservice.chnl.youdao.com,REJECT
@@ -1820,6 +1822,7 @@ DOMAIN-SUFFIX,ad.about.co.kr,REJECT
 DOMAIN-SUFFIX,ad.accessmediaproductions.com,REJECT
 DOMAIN-SUFFIX,ad.adhouyi.cn,REJECT
 DOMAIN-SUFFIX,ad.adwo.com,REJECT
+DOMAIN-SUFFIX,ad.aidalan.com,REJECT
 DOMAIN-SUFFIX,ad.api.3g.tudou.com,REJECT
 DOMAIN-SUFFIX,ad.bitmedia.io,REJECT
 DOMAIN-SUFFIX,ad.bjmama.net,REJECT
@@ -2219,6 +2222,7 @@ DOMAIN-SUFFIX,arealx.com,REJECT
 DOMAIN-SUFFIX,as.inbox.com,REJECT
 DOMAIN-SUFFIX,as.sinahk.net,REJECT
 DOMAIN-SUFFIX,as.trklinklog.com,REJECT
+DOMAIN-SUFFIX,as.yuewz.com,REJECT
 DOMAIN-SUFFIX,asd.projectfreetv.so,REJECT
 DOMAIN-SUFFIX,ashow.pcpop.com,REJECT
 DOMAIN-SUFFIX,assets.210189.com,REJECT
@@ -3362,6 +3366,7 @@ DOMAIN-SUFFIX,img.9duw.com,REJECT
 DOMAIN-SUFFIX,img.ad.zhangyue.com,REJECT
 DOMAIN-SUFFIX,img.adpush.cn,REJECT
 DOMAIN-SUFFIX,img.dawenxue.org,REJECT
+DOMAIN-SUFFIX,img.khlxw.com,REJECT
 DOMAIN-SUFFIX,img.libdd.com,REJECT
 DOMAIN-SUFFIX,img.meipic.net,REJECT
 DOMAIN-SUFFIX,img.qdscgj.com,REJECT
@@ -3504,6 +3509,7 @@ DOMAIN-SUFFIX,js.tongji.linezing.com,REJECT
 DOMAIN-SUFFIX,js.ubaike.cn,REJECT
 DOMAIN-SUFFIX,js.union-wifi.com,REJECT
 DOMAIN-SUFFIX,js.users.51.la,REJECT
+DOMAIN-SUFFIX,js.wo-x.cn,REJECT
 DOMAIN-SUFFIX,js1.2abc8.com,REJECT
 DOMAIN-SUFFIX,js1.xbaixing.com,REJECT
 DOMAIN-SUFFIX,js1.zuocai.tv,REJECT
@@ -4778,6 +4784,7 @@ DOMAIN-SUFFIX,usingde.com,REJECT
 DOMAIN-SUFFIX,uss-pid.lenovomm.com,REJECT
 DOMAIN-SUFFIX,usync.aws.rubiconproject.com,REJECT
 DOMAIN-SUFFIX,utility.rogersmedia.com,REJECT
+DOMAIN-SUFFIX,uu.feipukeplus.com,REJECT
 DOMAIN-SUFFIX,uuidapi.yunos.com,REJECT
 DOMAIN-SUFFIX,uulucky.com,REJECT
 DOMAIN-SUFFIX,uvclick.com,REJECT
@@ -5962,6 +5969,7 @@ DOMAIN-SUFFIX,aliyun.com,PROXY
 DOMAIN-SUFFIX,amap.com,PROXY
 DOMAIN-SUFFIX,analytics.126.net,PROXY
 DOMAIN-SUFFIX,apache.org,PROXY
+DOMAIN-SUFFIX,api.crisp.chat,PROXY
 DOMAIN-SUFFIX,appstore.com,PROXY
 DOMAIN-SUFFIX,autonavi.com,PROXY
 DOMAIN-SUFFIX,bababian.com,PROXY
@@ -5987,6 +5995,7 @@ DOMAIN-SUFFIX,cnbeta.com,PROXY
 DOMAIN-SUFFIX,cnbetacdn.com,PROXY
 DOMAIN-SUFFIX,conoha.jp,PROXY
 DOMAIN-SUFFIX,culturedcode.com,PROXY
+DOMAIN-SUFFIX,dct-cloud.com,PROXY
 DOMAIN-SUFFIX,didialift.com,PROXY
 DOMAIN-SUFFIX,douban.com,PROXY
 DOMAIN-SUFFIX,doubanio.com,PROXY
@@ -6033,6 +6042,7 @@ DOMAIN-SUFFIX,jianshu.io,PROXY
 DOMAIN-SUFFIX,jianshuapi.com,PROXY
 DOMAIN-SUFFIX,jiathis.com,PROXY
 DOMAIN-SUFFIX,jomodns.com,PROXY
+DOMAIN-SUFFIX,jsboxbbs.com,PROXY
 DOMAIN-SUFFIX,knewone.com,PROXY
 DOMAIN-SUFFIX,kuaidi100.com,PROXY
 DOMAIN-SUFFIX,lecloud.com,PROXY
@@ -6135,6 +6145,7 @@ DOMAIN-SUFFIX,ximalaya.com,PROXY
 DOMAIN-SUFFIX,xitek.com,PROXY
 DOMAIN-SUFFIX,xmcdn.com,PROXY
 DOMAIN-SUFFIX,xslb.net,PROXY
+DOMAIN-SUFFIX,xteko.com,PROXY
 DOMAIN-SUFFIX,xunlei.com,PROXY
 DOMAIN-SUFFIX,yach.me,PROXY
 DOMAIN-SUFFIX,yeepay.com,PROXY
